# chipper

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md  install-vst3.ps1
.github/workflows/: release.yml
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.cpp  Presets.h
Source/Engine/: ChipCore.cpp  ChipCore.h  ChipDescriptors.cpp  ChipDescriptors.h  ControlRegistry.cpp  ControlRegistry.h
cmake/: WriteBuildInfo.cmake
docs/: emulation-accuracy.md  emulator-source-map.md  preset-sourcing.md  priority-roadmap.md  product-gap-roadmap.md  product-spec.md  release-builds.md  snes-spc700-plan.md  ui-architecture.md  ui-priority-audit.md
docs/assets/: chipper-ascii-logo.html
scripts/: install-vst3.ps1  verify-presets.ps1
skills/chipper-juce-ui/: SKILL.md
tests/: assert_descriptor_list_json.py  assert_factory_presets_audible.py  assert_preset_catalog_json.py  assert_render_json.py  descriptor_smoke.cpp  editor_size_smoke.cpp  parameter_midi_cc_smoke.cpp  processor_midi_cc_smoke.cpp  write_binary_fixture.py
tests/events/: arcade-chip-poly-events.txt  dmg-chip-poly-events.txt  dmg-noise-divisor0-events.txt  dmg-noise-envelope-events.txt  dmg-noise-shift-stop-events.txt  dmg-nr52-status-bits-events.txt  dmg-power-wave-events.txt  dmg-stereo-left-events.txt  dmg-stereo-right-events.txt  dmg-sweep-events.txt  dmg-sweep-overflow-events.txt  huc6280-chip-poly-events.txt  namco-wsg-chip-poly-events.txt  nes-chip-poly-events.txt  nes-dmc-direct-load-high-events.txt  nes-dmc-direct-load-low-events.txt  nes-fds-four-voice-events.txt  nes-frame-counter-5step-events.txt  nes-frame-counter-inhibit-events.txt  nes-frame-counter-irq-events.txt  nes-mmc5-five-voice-events.txt  nes-note-events.txt  nes-sunsoft5b-six-voice-events.txt  nes-sweep-add-events.txt  nes-sweep-mute-events.txt  nes-sweep-negate-events.txt  nes-triangle-linear-decay-events.txt  nes-triangle-linear-mute-events.txt  nes-triangle-linear-reload-events.txt  nes-vrc6-six-voice-events.txt  nes-vrc7-nine-voice-events.txt  opl-rhythm-events.txt  opl3-eighteen-channel-chip-poly-events.txt  opl3-four-op-pair-events.txt  opl3-nine-channel-chip-poly-events.txt  opl3-release-events.txt  paula-chip-poly-events.txt  pokey-chip-poly-events.txt  pokey-paired-chip-poly-events.txt  saa1099-six-voice-events.txt  (+28 more)
tools/: chipper_render.cpp
